[package]
name = "athena"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive"] }
file-owner = "0.1.1"
flate2 = "1.0.25"
futures = "0.3.25"
indicatif = "0.17.2"
relative-path = "1.7.2"
tar = "0.4.38"
tokio = { version = "1.23.1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "2.1"
